Setup basic project structure

--- a/server/src/FootballSubscriber.Api/FootballSubscriber.Api.csproj
+++ b/server/src/FootballSubscriber.Api/FootballSubscriber.Api.csproj
@@ -1,11 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <UserSecretsId>f46e426d-1d1c-4c0f-8b9d-9ffd2b042a72</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="7.1.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\FootballSubscriber.Infrastructure\FootballSubscriber.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
