--- a/server/src/FootballSubscriber.Infrastructure/FootballSubscriber.Infrastructure.csproj
+++ b/server/src/FootballSubscriber.Infrastructure/FootballSubscriber.Infrastructure.csproj
@@ -4,4 +4,13 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Autofac" Version="6.2.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\FootballSubscriber.Core\FootballSubscriber.Core.csproj" />
+  </ItemGroup>
+
 </Project>
