--- a/server/src/FootballSubscriber.Core/FootballSubscriber.Core.csproj
+++ b/server/src/FootballSubscriber.Core/FootballSubscriber.Core.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Services" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Autofac" Version="6.2.0" />
+  </ItemGroup>
+
 </Project>
