--- a/server/src/FootballSubscriber.Core/FootballSubscriber.Core.csproj
+++ b/server/src/FootballSubscriber.Core/FootballSubscriber.Core.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Autofac" Version="6.2.0" />
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
   </ItemGroup>
 
 </Project>
