--- a/client/package.json
+++ b/client/package.json
@@ -17,10 +17,12 @@
     "next": "10.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-query": "^3.16.0"
+    "react-query": "^3.16.0",
+    "react-select": "^4.3.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.5",
+    "@types/react-select": "^4.0.15",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
     "@typescript-eslint/parser": "^4.22.1",
     "eslint": "^7.25.0",
