--- a/client/.env.local.example
+++ b/client/.env.local.example
@@ -12,3 +12,6 @@ AUTH0_CLIENT_ID='YOUR_AUTH0_CLIENT_ID'
 
 # Your Auth0 application's Client Secret
 AUTH0_CLIENT_SECRET='YOUR_AUTH0_CLIENT_SECRET'
+
+# Your Auth0 application's audience
+AUTH0_AUDIENCE='YOUR_AUTH0_AUDIENCE'
