Implement service to get user profile information using the Auth0 management API

--- a/server/src/FootballSubscriber.Api/appsettings.json
+++ b/server/src/FootballSubscriber.Api/appsettings.json
@@ -15,6 +15,12 @@
   },
   "Auth0": {
     "Authority": "https://football-subscriber.au.auth0.com/",
-    "Audience": "https://api.football-subscriber.jordansimsmith.com"
+    "Audience": "https://api.football-subscriber.jordansimsmith.com",
+    "ManagementBaseAddress": "https://football-subscriber.au.auth0.com",
+    "ManagementAudience": "https://football-subscriber.au.auth0.com/api/v2/"
+  },
+  "SendGrid": {
+    "SenderAddress": "football-subscriber@jordansimsmith.com",
+    "SenderName": "Football Subscriber"
   }
 }
