--- a/server/src/FootballSubscriber.Infrastructure/FootballSubscriber.Infrastructure.csproj
+++ b/server/src/FootballSubscriber.Infrastructure/FootballSubscriber.Infrastructure.csproj
@@ -5,8 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Auth0.ManagementApi" Version="7.8.0" />
     <PackageReference Include="Autofac" Version="6.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.5" />
+    <PackageReference Include="SendGrid" Version="9.23.1" />
   </ItemGroup>
 
   <ItemGroup>
