Implement FixtureChangeNotificationService to notify subscribers of a change

--- a/server/src/FootballSubscriber.Api/appsettings.json
+++ b/server/src/FootballSubscriber.Api/appsettings.json
@@ -21,6 +21,8 @@
   },
   "SendGrid": {
     "SenderAddress": "football-subscriber@jordansimsmith.com",
-    "SenderName": "Football Subscriber"
-  }
+    "SenderName": "Football Subscriber",
+    "FixtureChangeTemplateId": "d-648d58e65a5c4674a937a830fd213e16"
+  },
+  "ApplicationUrl": "https://football-subscriber.jordansimsmith.com"
 }
