--- a/.github/workflows/nextjs-client-build.yml
+++ b/.github/workflows/nextjs-client-build.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Login to Github docker registry
         uses: docker/login-action@v1
         with:
-          registry: docker.pkg.github.comn
+          registry: docker.pkg.github.com
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Build and push container image
