Specify directory to run tests in

--- a/.github/workflows/dotnet-server-build.yml
+++ b/.github/workflows/dotnet-server-build.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           dotnet-version: 5.0.x
       - name: Run tests
-        run: dotnet test
+        run: dotnet test server
       - name: Login to Github docker registry
         uses: docker/login-action@v1
         with:
