--- a/.github/workflows/dotnet-server-build.yml
+++ b/.github/workflows/dotnet-server-build.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Login to Github docker registry
         uses: docker/login-action@v1
         with:
-          registry: docker.pkg.github.com
+          registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Build and push container image
@@ -33,4 +33,4 @@ jobs:
           push: true
           context: server
           tags: |
-            docker.pkg.github.com/${{ github.repository }}/football-subscriber-server:${{ github.sha }}
+            ghcr.io/${{ github.repository_owner }}/football-subscriber-server:${{ github.sha }}
