--- a/.github/workflows/nextjs-client-build.yml
+++ b/.github/workflows/nextjs-client-build.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Login to Github docker registry
         uses: docker/login-action@v1
         with:
-          registry: docker.pkg.github.com
+          registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Build and push container image
@@ -29,4 +29,4 @@ jobs:
           build-args: |
             NEXT_PUBLIC_SERVER_BASE=${{ secrets.SERVER_BASE }}
           tags: |
-            docker.pkg.github.com/${{ github.repository }}/football-subscriber-client:${{ github.sha }}
+            ghcr.io/${{ github.repository_owner }}/football-subscriber-client:${{ github.sha }}
