Refactor access token handling to refresh token when nearing expiry instead of sending a new token per page

--- a/client/.env.local.example
+++ b/client/.env.local.example
@@ -15,3 +15,5 @@ AUTH0_CLIENT_SECRET='YOUR_AUTH0_CLIENT_SECRET'
 
 # Your Auth0 application's audience
 AUTH0_AUDIENCE='YOUR_AUTH0_AUDIENCE'
+
+NEXT_PUBLIC_SERVER_BASE='http://localhost:5000'
