--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "framer-motion": "^4",
+    "jwt-decode": "^3.1.2",
     "next": "10.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -22,6 +23,7 @@
     "react-select": "^4.3.0"
   },
   "devDependencies": {
+    "@types/jwt-decode": "^3.1.0",
     "@types/react": "^17.0.5",
     "@types/react-select": "^4.0.15",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
