Enable hangfire dashboard in production with basic authentication

--- a/server/src/FootballSubscriber.Api/FootballSubscriber.Api.csproj
+++ b/server/src/FootballSubscriber.Api/FootballSubscriber.Api.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\FootballSubscriber.Core\FootballSubscriber.Core.csproj" />
     <ProjectReference Include="..\FootballSubscriber.Infrastructure\FootballSubscriber.Infrastructure.csproj" />
   </ItemGroup>
 
