--- a/server/src/FootballSubscriber.Api/appsettings.json
+++ b/server/src/FootballSubscriber.Api/appsettings.json
@@ -24,5 +24,8 @@
     "SenderName": "Football Subscriber",
     "FixtureChangeTemplateId": "d-648d58e65a5c4674a937a830fd213e16"
   },
-  "ApplicationUrl": "https://football-subscriber.jordansimsmith.com"
+  "ApplicationUrl": "https://football-subscriber.jordansimsmith.com",
+  "Hangfire": {
+    "Username": "hangfire"
+  }
 }
