--- a/client/package.json
+++ b/client/package.json
@@ -26,13 +26,7 @@
     "@types/jwt-decode": "^3.1.0",
     "@types/react": "^17.0.5",
     "@types/react-select": "^4.0.15",
-    "@typescript-eslint/eslint-plugin": "^4.22.1",
-    "@typescript-eslint/parser": "^4.22.1",
-    "eslint": "^7.25.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-react": "^7.23.2",
-    "prettier": "^2.2.1",
-    "typescript": "^4.2.4"
+    "eslint": "^8.14.0",
+    "eslint-config-jordansimsmith": "^1.0.5"
   }
 }
