--- a/client/package.json
+++ b/client/package.json
@@ -6,26 +6,27 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint ."
+    "lint": "next lint",
+    "fix": "next lint --fix"
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^1.3.1",
-    "@chakra-ui/icons": "^1.0.13",
-    "@chakra-ui/react": "^1.6.1",
+    "@chakra-ui/icons": "^1.1.7",
+    "@chakra-ui/react": "^1.8.8",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
-    "framer-motion": "^4",
+    "framer-motion": "^6.3.3",
     "jwt-decode": "^3.1.2",
-    "next": "10.2.3",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-query": "^3.16.0",
-    "react-select": "^4.3.0"
+    "next": "^12.1.5",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-query": "^3.38.1",
+    "react-select": "^5.3.1"
   },
   "devDependencies": {
     "@types/jwt-decode": "^3.1.0",
-    "@types/react": "^17.0.5",
-    "@types/react-select": "^4.0.15",
+    "@types/react": "^18.0.8",
+    "@types/react-select": "^5.0.1",
     "eslint": "^8.14.0",
     "eslint-config-jordansimsmith": "^1.0.5"
   }
