Implement open telemetry logging and tracing

--- a/server/src/FootballSubscriber.Api/appsettings.json
+++ b/server/src/FootballSubscriber.Api/appsettings.json
@@ -4,7 +4,8 @@
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information",
-      "Hangfire": "Information"
+      "Hangfire": "Information",
+      "System.Net.Http.HttpClient": "Warning"
     }
   },
   "AllowedHosts": "*",
@@ -27,5 +28,8 @@
   "ApplicationUrl": "https://football-subscriber.jordansimsmith.com",
   "Hangfire": {
     "Username": "hangfire"
+  },
+  "OpenTelemetry": {
+    "Endpoint": "http://localhost:4317"
   }
 }
