--- a/server/src/FootballSubscriber.Infrastructure/FootballSubscriber.Infrastructure.csproj
+++ b/server/src/FootballSubscriber.Infrastructure/FootballSubscriber.Infrastructure.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Data\Configurations" />
     <Folder Include="Data\Migrations" />
   </ItemGroup>
 
